<resources>
    <string name="app_name">Calculator</string>
    <string name="button_01" >1</string>
    <string name="button_02" >2</string>
    <string name="button_03">3</string>
    <string name="button_eq">=</string>
    <string name="button_c">C/CE</string>
    <string name="button_00" >0</string>
    <string name="button_dot" >.</string>
    <string name="button_add">+</string>
    <string name="button_minus" >-</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="button_divide" >/</string>
    <string name="button_07">7</string>
    <string name="button_08" >8</string>
    <string name="button_09">9</string>
    <string name="button_multiply">X</string>
</resources>
